--- a/scss/sheets/_pc-sheet.scss
+++ b/scss/sheets/_pc-sheet.scss
@@ -286,6 +286,10 @@
                 }
               }
             }
+
+            .acquaintances.active {
+              overflow: visible;
+            }
           }
 
           section.action-ratings {
