--- a/templates/items/cohort_expert-sheet.hbs
+++ b/templates/items/cohort_expert-sheet.hbs
@@ -49,7 +49,7 @@
         <span class="harm-number shadowed">2</span>
         <div class="flex-vertical">
           <span class="harm-label shadowed">Impaired</span>
-          <span class="harm-effect shadowed">-1d to Quality Rolls</span>
+          <span class="harm-effect shadowed">Reduced Effect, -1d</span>
         </div>
       </div>
       <div class="flex-horizontal harm-level harm-level-3 {{~#if (test system.harm.value "==" 3)}} active{{/if}}"
