--- a/scss/core/_globals.scss
+++ b/scss/core/_globals.scss
@@ -189,4 +189,86 @@
   .full-width {
     width: 100%;
   }
+
+  .tooltip-trigger { pointer-events: auto !important }
+
+  .tooltip {
+    opacity: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
+
+    color: var(--blades-white);
+    background: var(--blades-black-dark);
+
+    width: max-content;
+    max-width: 400px;
+
+    padding: toRem(6px);
+    border: #{toRem(1px)} solid var(--blades-grey);
+    border-radius: toRem(3px);
+
+    hyphens: auto;
+    text-align: justify;
+
+    position: absolute;
+    top: unset;
+    left: -200px;
+    bottom: 50px;
+    z-index: zLevel(+4);
+
+    pointer-events: none;
+
+    h2 {
+      color: var(--blades-white-bright);
+    }
+
+    &.tooltip-left {
+      left: 200px;
+      max-width: unset;
+    }
+
+    &.tooltip-portrait {
+      bottom: -45px;
+      left: -200px;
+    }
+
+    &.tooltip-playbook {
+      bottom: unset;
+      top: 0px;
+      left: -220px;
+    }
+
+    &.tooltip-trauma {
+      left: -300px;
+    }
+
+    &.tooltip-dialog-selection {
+      left: -300px;
+      bottom: 75px;
+    }
+
+    &.tooltip-attribute {
+      left: -110px;
+      bottom: 10px;
+      translate: 0% 50% !important;
+      > p { font-size: 16px; }
+
+    }
+
+    &.tooltip-action {
+      left: unset;
+      right: -100px;
+      bottom: 0px;
+      max-width: 525px;
+      translate: 0% 50% !important;
+
+      > p { font-size: 16px; }
+    }
+  }
+
+  .tooltip-scaling-elem {
+    display: inline-block;
+  }
 }
