--- a/scss/sheets/_cohort-sheet.scss
+++ b/scss/sheets/_cohort-sheet.scss
@@ -140,6 +140,7 @@
             flex-grow: 2;
             background: linear-gradient(to right, var(--blades-red), var(--blades-red-dark), transparent);
             &.harm-level-0 { background: transparent }
+            &.harm-level-4 { background: var(--blades-red) }
             ~ .harm-level {
               background: transparent;
               .harm-number { color: var(--blades-white) }
