--- a/templates/items/clock_keeper-sheet.hbs
+++ b/templates/items/clock_keeper-sheet.hbs
@@ -1,7 +1,7 @@
 <form class="{{cssClass}} clock-keeper-sheet" autocomplete="off">
 
   <img class="sheet-img" src="{{item.img}}" />
-  {{log "Clock Keeper Sheet" this}}
+  {{eLog "Clock Keeper Sheet" this}}
 
   {{!-- Sheet Container --}}
   <div class="sheet-root">
