--- a/templates/items/gm_tracker-sheet.hbs
+++ b/templates/items/gm_tracker-sheet.hbs
@@ -1,7 +1,7 @@
 <form class="{{cssClass}} tracker-sheet" autocomplete="off">
 
   <img class="sheet-img" src="{{item.img}}" />
-  {{log "Tracker Sheet" this}}
+  {{eLog "Tracker Sheet" this}}
 
   {{!-- Sheet Container --}}
   <div class="sheet-root">
