--- a/templates/overlays/clock-key.hbs
+++ b/templates/overlays/clock-key.hbs
@@ -1,4 +1,4 @@
-{{log "CLOCK KEY" this}}
+{{eLog "CLOCK KEY" this}}
 {{#if isVisible}}
   <div id="{{id}}" class="clock-key {{~#if isActive}} active-key{{/if}}" data-size="{{count clocks}}">
     {{#if isNameVisible}}
