--- a/templates/parts/cohort-block.hbs
+++ b/templates/parts/cohort-block.hbs
@@ -1,4 +1,4 @@
-{{log "COHORT BLOCK" this}}
+{{eLog "COHORT BLOCK" this}}
 <div class="comp comp-vertical comp-cohort flex-vertical" data-comp-id="{{id}}" data-comp-type="Item">
   <div class="cohort-top">
     <div class="cohort-image-container">
