--- a/templates/items/cohort_gang-sheet.hbs
+++ b/templates/items/cohort_gang-sheet.hbs
@@ -1,4 +1,4 @@
-{{log "COHORT GANG SHEET" this}}
+{{eLog "COHORT GANG SHEET" this}}
 <form class="{{cssClass}}" autocomplete="off">
 
   {{!-- Tags --}}
