--- a/templates/overlays/clock-overlay.hbs
+++ b/templates/overlays/clock-overlay.hbs
@@ -38,7 +38,7 @@
   </defs>
 </svg>
 
-{{log "CLOCK OVERLAY" this}}
+{{eLog "CLOCK OVERLAY" this}}
 
 {{#each clock_keys}}
   {{#if (eq ../currentScene scene)}}
